--- a/src/styles.css
+++ b/src/styles.css
@@ -33,11 +33,11 @@ body {
 
 .firstCol {
   text-align: left !important;
-  width: 130px !important;
+  width: 150px !important;
 }
 
 .calTable, .sampleTable, .blankTable, .RMTable {
-  width: 800px;
+  max-width: 800px;
   border-collapse: collapse;
 }
 
@@ -51,6 +51,8 @@ body {
 
 .calTable th, .sampleTable th, .blankTable th, .RMTable th {
   border-bottom: 2px solid black;
+  width: 75px;
+  padding: 2px 4px;
 }
 
 .headerItem {
