remove csv reader, change presentation

--- a/src/styles.css
+++ b/src/styles.css
@@ -8,7 +8,7 @@ body {
 }
 
 .container {
-  width: 800px;
+  width: auto;
   margin: auto;
 }
 
@@ -24,7 +24,7 @@ body {
   border-bottom: 1px solid black;
   padding: 1px 3px;
   text-align: center;
-  width: 75px;
+  width: 95px !important;
 }
 
 .colouredRow {
@@ -33,31 +33,56 @@ body {
 
 .firstCol {
   text-align: left !important;
-  min-width: 150px !important;
+  min-width: 175px !important;
 }
 
-.calTable, .sampleTable, .blankTable, .RMTable {
-  max-width: 100%;
+.calTable, .sampleTable, .blankTable, .RMTable, .methodTable {
   border-collapse: collapse;
 }
 
 .calTable td, .sampleTable td, .RMTable td {
   border-bottom: 1px solid black;
-  padding: 2px 4px;
+  padding: 3px 3px;
   text-align: center;
-  width: 75px !important;
+  width: 105px !important;
   vertical-align: middle;
 }
 
 .calTable th, .sampleTable th, .blankTable th, .RMTable th {
   border-bottom: 2px solid black;
-  width: 75px !important;
-  padding: 2px 4px;
+  width: 105px !important;
+  padding: 3px 3px;
 }
 
 .headerItem {
   font-weight: bold;
   padding: 10px;
+}
+
+.methodButton {
+  margin: 2px 5px;
+  padding: 2px 10px;
+}
+
+.methodButtons {
+  max-width: 800px;
+  margin: auto;
+  text-align: center;
+}
+
+.methodTable th, .methodTable td {
+  padding: 5px 10px;
+  text-align: center;
+}
+
+.centeredContainerParent {
+  position: relative;
+}
+
+.centeredContainerChild {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .sampleFail {
@@ -77,6 +102,10 @@ body {
 
 .calTable tr:nth-child(even) {
   background-color: gainsboro
+}
+
+.stripedTable tr:nth-child(even) {
+  background-color: gainsboro;
 }
 
 .thickBottomBorder {
